增加了管理员的批量删除，也是最终版

--- a/JLWeb/pom.xml
+++ b/JLWeb/pom.xml
@@ -148,6 +148,11 @@
       <artifactId>commons-fileupload</artifactId>
       <version>1.4</version>
     </dependency>
+      <dependency>
+          <groupId>com.freemanwu</groupId>
+          <artifactId>JLWeb</artifactId>
+          <version>1.0-SNAPSHOT</version>
+      </dependency>
 
   </dependencies>
 
